data/derived/comb/progs/unify/prog3723.ml.out
Characters 62-63:
  sepConcat ";" x;;
                ^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string list
